# task2-js-2-python

./: Dockerfile.scaffold-test  Dockerfile.test  environment_interface.md  fix_all.sh  fix_links.sh  html_fix.sh  link_test.sh  reward_spec.md  run_tests.sh  test_requirements.txt
annotations/: dependency_mapping.md  idiom_adaptation.md  non_literal_rationale.md  trajectory_annotations.jsonl  translation_strategy.md
docker/: Dockerfile.combined
evaluations/: Dockerfile
golden_repo/: pyproject.toml
golden_repo/mdforge/: __init__.py  __main__.py  cli.py  core.py
golden_repo/mdforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
golden_repo/mdforge/config/: __init__.py  defaults.py
golden_repo/mdforge/parser/: __init__.py  codeblocks.py  frontmatter.py  headings.py  links.py  metadata.py
golden_repo/mdforge/transform/: __init__.py  html.py  stats.py  toc.py
golden_repo/mdforge/utils/: __init__.py  errors.py  fileio.py  logger.py
golden_repo/mdforge/validator/: __init__.py  linkchecker.py
grader/: grade.py
source_repo/: .eslintrc.json  README.md  package.json
source_repo/src/: cli.js  index.js
source_repo/src/config/: defaults.js
source_repo/src/parser/: codeblocks.js  frontmatter.js  headings.js  index.js  links.js  metadata.js
source_repo/src/transform/: html.js  index.js  stats.js  toc.js
source_repo/src/utils/: errors.js  fileio.js  logger.js
source_repo/src/validator/: index.js  (+1 more)
submission/: Dockerfile  prompt.txt  reasoning.txt  task_config.json  test_patch.diff
tests/: test_mdforge_behavioral.py
