[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdforge"
version = "1.2.0"
description = "A CLI toolkit for parsing, validating, and transforming Markdown files"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "python-frontmatter>=1.0.0",
]

[project.scripts]
mdforge = "mdforge.cli:cli"

[tool.setuptools.packages.find]
include = ["mdforge", "mdforge.*"]


